--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="col-lg-12">
       <div class="jumbotron">
         <h1 class="text-center">Supercell program</h1>
-        <h2 class="text-center">version 2.0</h2>
+        <h2 class="text-center">version 2.x</h2>
         <p class="text-center">a combinatorial structure-generation approach for the local-level modeling of atomic substitutions and partial occupancies in crystals.</p>
         <div class="row">
           <div class="col-lg-3 col-lg-offset-3 col-md-offset-2 сol-md-3 col-sm-offset-1 col-sm-4 col-xs-offset-1 col-xs-5">
@@ -558,7 +558,7 @@ ga('require', 'pageVisibilityTracker');
   <hr>
   <div class="row">
     <div class="text-center col-sm-6">
-      <h3><i class="fa fa-file-zip-o" aria-hidden="true"></i>  Compiled binaries (v2.0) </h3>
+      <h3><i class="fa fa-file-zip-o" aria-hidden="true"></i>  Compiled binaries (v2.x) </h3>
       <p>The easiest way to obtain the program is to download compiled binaries for Linux, Mac and Windows platforms. Just download the archive, unpack it and follow the instruction inside. You don't need to install the binaries, therefore you can use it without a root permission. Supercell v1.2 is available <a href="https://github.com/orex/supercell/tree/gh-pages/v1.2">here</a>.</p>
     </div>  
     <div class="text-center col-sm-6">
